force-app/main/default/objects/Contact/fields/Contact_Me_At__c.field-meta.xml
<CustomField>
    <fullName>Contact_Me_At__c</fullName>
    <label>Contact Me At</label>
    <length>25</length>
    <type>Text</type>
</CustomField>