force-app/main/default/objects/Contact/fields/Core_AG_link__c.field-meta.xml
<CustomField>
    <fullName>Core_AG_link__c</fullName>
    <label>Core: AG link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>