force-app/main/default/objects/Contact/fields/Core_AG_link_NP_MS__c.field-meta.xml
<CustomField>
    <fullName>Core_AG_link_NP_MS__c</fullName>
    <label>Core: AG link – NP (MS)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>