force-app/main/default/objects/Contact/fields/Core_Alternative_segment__c.field-meta.xml
<CustomField>
    <fullName>Core_Alternative_segment__c</fullName>
    <label>Core: Alternative segment</label>
    <length>250</length>
    <type>Text</type>
</CustomField>