force-app/main/default/objects/Contact/fields/Core_AM_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Core_AM_Meeting_Link__c</fullName>
    <label>Core: AM Meeting Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>