force-app/main/default/objects/Contact/fields/Core_Client_type__c.field-meta.xml
<CustomField>
    <fullName>Core_Client_type__c</fullName>
    <label>Core: Client type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>