force-app/main/default/objects/Contact/fields/Core_Close_date__c.field-meta.xml
<CustomField>
    <fullName>Core_Close_date__c</fullName>
    <label>Core: Close date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>