force-app/main/default/objects/Contact/fields/Core_Issue_s__c.field-meta.xml
<CustomField>
    <fullName>Core_Issue_s__c</fullName>
    <label>Core: Issue(s)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>