force-app/main/default/objects/Contact/fields/Core_Last_year_link__c.field-meta.xml
<CustomField>
    <fullName>Core_Last_year_link__c</fullName>
    <label>Core: Last year link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>