force-app/main/default/objects/Contact/fields/Core_Magazine_name__c.field-meta.xml
<CustomField>
    <fullName>Core_Magazine_name__c</fullName>
    <label>Core: Magazine name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>