force-app/main/default/objects/Contact/fields/Core_Magazine_readership__c.field-meta.xml
<CustomField>
    <fullName>Core_Magazine_readership__c</fullName>
    <label>Core: Magazine readership</label>
    <length>250</length>
    <type>Text</type>
</CustomField>