force-app/main/default/objects/Contact/fields/Core_Market_city__c.field-meta.xml
<CustomField>
    <fullName>Core_Market_city__c</fullName>
    <label>Core: Market city</label>
    <length>250</length>
    <type>Text</type>
</CustomField>