force-app/main/default/objects/Contact/fields/Core_Market_project__c.field-meta.xml
<CustomField>
    <fullName>Core_Market_project__c</fullName>
    <label>Core: Market project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>