force-app/main/default/objects/Contact/fields/Core_Market_Sales_Stop_Date__c.field-meta.xml
<CustomField>
    <fullName>Core_Market_Sales_Stop_Date__c</fullName>
    <label>Core: Market Sales Close Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>