force-app/main/default/objects/Contact/fields/Core_Opp_stage_comments__c.field-meta.xml
<CustomField>
    <fullName>Core_Opp_stage_comments__c</fullName>
    <label>Core: Opp stage comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>