force-app/main/default/objects/Contact/fields/Core_Opportunity_owner_email__c.field-meta.xml
<CustomField>
    <fullName>Core_Opportunity_owner_email__c</fullName>
    <label>Core: Opportunity owner email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>