force-app/main/default/objects/Contact/fields/Core_Opportunity_owner_full_name__c.field-meta.xml
<CustomField>
    <fullName>Core_Opportunity_owner_full_name__c</fullName>
    <label>Core: Opportunity owner full name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>