force-app/main/default/objects/Contact/fields/Core_Opportunity_owner_phone__c.field-meta.xml
<CustomField>
    <fullName>Core_Opportunity_owner_phone__c</fullName>
    <label>Core: Opportunity owner phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>