force-app/main/default/objects/Contact/fields/Core_Opportunity_stage__c.field-meta.xml
<CustomField>
    <fullName>Core_Opportunity_stage__c</fullName>
    <label>Core: Opportunity stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>