force-app/main/default/objects/Contact/fields/Core_Profession__c.field-meta.xml
<CustomField>
    <fullName>Core_Profession__c</fullName>
    <label>Core: Profession</label>
    <length>250</length>
    <type>Text</type>
</CustomField>