force-app/main/default/objects/Contact/fields/Core_Publication_year__c.field-meta.xml
<CustomField>
    <fullName>Core_Publication_year__c</fullName>
    <label>Core: Publication year</label>
    <length>250</length>
    <type>Text</type>
</CustomField>