force-app/main/default/objects/Contact/fields/Core_Winner_Code__c.field-meta.xml
<CustomField>
    <fullName>Core_Winner_Code__c</fullName>
    <label>Core: Winner Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>