force-app/main/default/objects/Contact/fields/Core_Winner_Email_Login__c.field-meta.xml
<CustomField>
    <fullName>Core_Winner_Email_Login__c</fullName>
    <label>Core: Winner Email Login</label>
    <length>250</length>
    <type>Text</type>
</CustomField>