force-app/main/default/objects/Contact/fields/Credit_Available_for_Display_Ad_Package__c.field-meta.xml
<CustomField>
    <fullName>Credit_Available_for_Display_Ad_Package__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Available for Display Ad Package</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>