force-app/main/default/objects/Contact/fields/Credit_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Credit_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Awarded</label>
    <type>Checkbox</type>
</CustomField>