force-app/main/default/objects/Contact/fields/Credit_Awarded_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Credit_Awarded_Date_and_Time__c</fullName>
    <label>Credit Awarded Date and Time</label>
    <type>DateTime</type>
</CustomField>