force-app/main/default/objects/Contact/fields/Credit_Awarded_Description__c.field-meta.xml
<CustomField>
    <fullName>Credit_Awarded_Description__c</fullName>
    <label>Credit Awarded Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>