force-app/main/default/objects/Contact/fields/Credit_Risk_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used to trigger credit risk automation due to a conflict w/ validation rule on contact object preventing contact info from being visible if credit risk is checked</description>
    <label>Credit Risk Hidden</label>
    <type>Checkbox</type>
</CustomField>