force-app/main/default/objects/Contact/fields/Credit_Risk_Open_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Open_Balance__c</fullName>
    <description>Credit Risk Open Balance</description>
    <inlineHelpText>Amount owed by credit risk</inlineHelpText>
    <label>Credit Risk Open Balance</label>
    <length>10</length>
    <type>Text</type>
</CustomField>