force-app/main/default/objects/Contact/fields/Credit_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Reason__c</fullName>
    <description>Required when the &quot;credit risk&quot; box is checked</description>
    <inlineHelpText>Required when the &quot;credit risk&quot; box is checked</inlineHelpText>
    <label>Credit Risk Reason</label>
    <type>TextArea</type>
</CustomField>