force-app/main/default/objects/Contact/fields/CSR_Appt_Link__c.field-meta.xml
<CustomField>
    <fullName>CSR_Appt_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001hknrUAA&amp;ContactID=&quot;+ Id +&quot;&amp;PID=&quot;+ Owner.Primary_Traffic__r.Provider_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Appt Link for AMP-Only Buyers</label>
    <type>Text</type>
</CustomField>