force-app/main/default/objects/Contact/fields/CSR_Appt_Link_for_Marketing_Services__c.field-meta.xml
<CustomField>
    <fullName>CSR_Appt_Link_for_Marketing_Services__c</fullName>
    <description>Wildcard CSR appointment - Only Brendon Schmitzer assigned initially</description>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001gIhqUAE&amp;ContactID=&quot;+ Id +&quot;&amp;PId=&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>****For internal use only****
This formula will be modified when more CSR&apos;s are assigned to the service</inlineHelpText>
    <label>CSR Appt Link for Marketing Services</label>
    <type>Text</type>
</CustomField>