force-app/main/default/objects/Contact/fields/CSR_Appt_Link_for_Wild_Card_Appointment__c.field-meta.xml
<CustomField>
    <fullName>CSR_Appt_Link_for_Wild_Card_Appointment__c</fullName>
    <description>Wildcard CSR appointment - round robbin</description>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001EfSeUAK&amp;ContactID=&quot;+ Id +&quot;&amp;PID=&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>***FOR INTERNAL USE ONLY***
Wild Card CSR appointment for when the dedicated CSR is unavailble</inlineHelpText>
    <label>CSR Appt. Link for Wild Card Appointment</label>
    <type>Text</type>
</CustomField>