force-app/main/default/objects/Contact/fields/CSR_Email__c.field-meta.xml
<CustomField>
    <fullName>CSR_Email__c</fullName>
    <formula>CSR_Owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Email</label>
    <type>Text</type>
</CustomField>