force-app/main/default/objects/Contact/fields/CSR_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>CSR_Full_Name__c</fullName>
    <formula>CSR_Owner__r.FirstName &amp; &quot; &quot; &amp; CSR_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Full Name</label>
    <type>Text</type>
</CustomField>