force-app/main/default/objects/Contact/fields/CSR_Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Last_Contact_Date__c</fullName>
    <label>CSR Last Contact Date</label>
    <type>Date</type>
</CustomField>