force-app/main/default/objects/Contact/fields/CSR_Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>CSR_Next_Action_Date__c</fullName>
    <label>CSR Next Action Date</label>
    <type>Date</type>
</CustomField>