force-app/main/default/objects/Contact/fields/CSR_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>