force-app/main/default/objects/Contact/fields/CSR_Phone__c.field-meta.xml
<CustomField>
    <fullName>CSR_Phone__c</fullName>
    <formula>CSR_Owner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Phone</label>
    <type>Text</type>
</CustomField>