force-app/main/default/objects/Contact/fields/CSR_PID__c.field-meta.xml
<CustomField>
    <fullName>CSR_PID__c</fullName>
    <formula>CSR_Owner__r.Provider_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR PID</label>
    <type>Text</type>
</CustomField>