force-app/main/default/objects/Contact/fields/CSR_Send_Proof__c.field-meta.xml
<CustomField>
    <fullName>CSR_Send_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSR Send Proof</label>
    <type>Checkbox</type>
</CustomField>