force-app/main/default/objects/Contact/fields/CSR_Status__c.field-meta.xml
<CustomField>
    <fullName>CSR_Status__c</fullName>
    <defaultValue>&quot;New - No CS Appointment Scheduled on Sumo&quot;</defaultValue>
    <label>CSR Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS Appointment Scheduled on Sumo</fullName>
            </value>
            <value>
                <fullName>New - No CS Appointment Scheduled on Sumo</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - 1st Request</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - 2nd Request</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - 3rd Request</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - Closed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Follow-Up Needed</fullName>
            </value>
            <value>
                <fullName>Post-Market Appointment Scheduled on Sumo</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Content Needed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Approval Needed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Urgent Response Needed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Closed</fullName>
            </value>
            <value>
                <fullName>No action needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>