force-app/main/default/objects/Contact/fields/CSR_Status_Xfer__c.field-meta.xml
<CustomField>
    <fullName>CSR_Status_Xfer__c</fullName>
    <description>Used by CSR log a call button flow to transfer statuses with the no change option</description>
    <inlineHelpText>Should not be visible</inlineHelpText>
    <label>CSR Status Xfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO CHANGE</fullName>
            </value>
            <value>
                <fullName>CS Appointment Scheduled on Sumo</fullName>
            </value>
            <value>
                <fullName>New - No CS Appointment Scheduled on Sumo</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - 1st Request</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - 2nd Request</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - 3rd Request</fullName>
            </value>
            <value>
                <fullName>CS Appointment Incomplete - Closed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Follow-Up Needed</fullName>
            </value>
            <value>
                <fullName>Post-Market Appointment Scheduled on Sumo</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Content Needed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Approval Needed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Urgent Response Needed</fullName>
            </value>
            <value>
                <fullName>CS Appointment Complete - Closed</fullName>
            </value>
            <value>
                <fullName>CS appointment NOT scheduled</fullName>
                <isActive>false</isActive>
                <label>CS appointment NOT scheduled</label>
            </value>
            <value>
                <fullName>CSR appointment scheduled</fullName>
                <isActive>false</isActive>
                <label>CSR appointment scheduled</label>
            </value>
            <value>
                <fullName>CSR follow-up appointment scheduled</fullName>
                <isActive>false</isActive>
                <label>CSR follow-up appointment scheduled</label>
            </value>
            <value>
                <fullName>Closed: Client success complete</fullName>
                <isActive>false</isActive>
                <label>Closed: Client success complete</label>
            </value>
            <value>
                <fullName>Closed: Client success target calls made</fullName>
                <isActive>false</isActive>
                <label>Closed: Client success target calls made</label>
            </value>
            <value>
                <fullName>Closed: Remove from queue</fullName>
                <isActive>false</isActive>
                <label>Closed: Remove from queue</label>
            </value>
            <value>
                <fullName>Collect content (non-profile)</fullName>
                <isActive>false</isActive>
                <label>Collect content (non-profile)</label>
            </value>
            <value>
                <fullName>Collect content (profile)</fullName>
                <isActive>false</isActive>
                <label>Collect content (profile)</label>
            </value>
            <value>
                <fullName>Follow-up needed: 1st call made</fullName>
                <isActive>false</isActive>
                <label>Follow-up needed: 1st call made</label>
            </value>
            <value>
                <fullName>Follow-up needed: 2nd call made</fullName>
                <isActive>false</isActive>
                <label>Follow-up needed: 2nd call made</label>
            </value>
            <value>
                <fullName>Follow-up needed: 3rd call made</fullName>
                <isActive>false</isActive>
                <label>Follow-up needed: 3rd call made</label>
            </value>
            <value>
                <fullName>Follow-up needed: 4th call made</fullName>
                <isActive>false</isActive>
                <label>Follow-up needed: 4th call made</label>
            </value>
            <value>
                <fullName>Follow-up needed: 5th call made</fullName>
                <isActive>false</isActive>
                <label>Follow-up needed: 5th call made</label>
            </value>
            <value>
                <fullName>Follow-up needed: Client engaged</fullName>
                <isActive>false</isActive>
                <label>Follow-up needed: Client engaged</label>
            </value>
            <value>
                <fullName>Follow-up needed: No contact yet</fullName>
                <isActive>false</isActive>
                <label>Follow-up needed: No contact yet</label>
            </value>
            <value>
                <fullName>Get approval (non-profile)</fullName>
                <isActive>false</isActive>
                <label>Get approval (non-profile)</label>
            </value>
            <value>
                <fullName>Get approval (profile)</fullName>
                <isActive>false</isActive>
                <label>Get approval (profile)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>