force-app/main/default/objects/Contact/fields/Current_FSP_AM__c.field-meta.xml
<CustomField>
    <fullName>Current_FSP_AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current FSP AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>