force-app/main/default/objects/Contact/fields/Current_Public_Entry__c.field-meta.xml
<CustomField>
    <fullName>Current_Public_Entry__c</fullName>
    <label>Current Public Entry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>