force-app/main/default/objects/Contact/fields/Custom_Phone__c.field-meta.xml
<CustomField>
    <fullName>Custom_Phone__c</fullName>
    <label>Custom Phone</label>
    <type>Phone</type>
</CustomField>