force-app/main/default/objects/Contact/fields/Date_of_most_recent_login__c.field-meta.xml
<CustomField>
    <fullName>Date_of_most_recent_login__c</fullName>
    <description>This is the date/time of the most recent login on the website.</description>
    <label>Date of most recent login</label>
    <type>DateTime</type>
</CustomField>