force-app/main/default/objects/Contact/fields/Display_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_First_Name__c</fullName>
    <description>Display First Name (first name used on digital products)</description>
    <inlineHelpText>Display First Name (first name used on digital products)</inlineHelpText>
    <label>Display First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>