force-app/main/default/objects/Contact/fields/Display_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Last_Name__c</fullName>
    <description>This name displays the last name (and middle name when provided by client). This field is used to populate digital products.</description>
    <inlineHelpText>This name displays the last name (and middle name when provided by client). This field is used to populate digital products.</inlineHelpText>
    <label>Display Last Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>