force-app/main/default/objects/Contact/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>This field is now a read-only field that is populated by combining the Display First and Display Last Name fields.</description>
    <formula>Display_First_Name__c &amp; &quot; &quot; &amp;  Display_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is now a read-only field that is populated by combining the Display First and Display Last Name fields.</inlineHelpText>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>