force-app/main/default/objects/Contact/fields/Display_Name_OLD__c.field-meta.xml
<CustomField>
    <fullName>Display_Name_OLD__c</fullName>
    <description>This field is no longer active. Display name is now populated through Display First Name and Display Last Name.</description>
    <inlineHelpText>This field is no longer active. Display name is now populated through Display First Name and Display Last Name.</inlineHelpText>
    <label>Display Name RETIRED</label>
    <length>250</length>
    <type>Text</type>
</CustomField>