force-app/main/default/objects/Contact/fields/Display_Team__c.field-meta.xml
<CustomField>
    <fullName>Display_Team__c</fullName>
    <label>Display Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>