force-app/main/default/objects/Contact/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <description>This is the title that will be used on marketing tools and web profiles.</description>
    <label>Display Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>