force-app/main/default/objects/Contact/fields/Do_Not_Call_for_NAMS_F_U__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_for_NAMS_F_U__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is available to be checked on the rare occasion that a client is upset with the quantity of calls they are receiving regarding marketing products we have available.</description>
    <label>Do Not Call for NAMS F/U</label>
    <type>Checkbox</type>
</CustomField>