force-app/main/default/objects/Contact/fields/DS_Last_Call_List_Name__c.field-meta.xml
<CustomField>
    <fullName>DS_Last_Call_List_Name__c</fullName>
    <label>DS Last Call List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>