force-app/main/default/objects/Contact/fields/E_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>E_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Interest Field</description>
    <label>E-Newsletter</label>
    <type>Checkbox</type>
</CustomField>