force-app/main/default/objects/Contact/fields/ELM_referral_form__c.field-meta.xml
<CustomField>
    <fullName>ELM_referral_form__c</fullName>
    <formula>&quot;https://www.essentialengine.com/elmreferral/?referral_id=&quot; &amp; SF_ID__c &amp; &quot;&amp;firstname=&quot; &amp;  FirstName &amp; &quot;&amp;email=&quot; &amp; Email &amp; &quot;&amp;source=AM&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ELM Friend Invite Form</label>
    <type>Text</type>
</CustomField>