force-app/main/default/objects/Contact/fields/ELM_referral_share_page__c.field-meta.xml
<CustomField>
    <fullName>ELM_referral_share_page__c</fullName>
    <formula>&quot;https://essentialengine.com/elm_referfriend/?referral_id=&quot; &amp; SF_ID__c &amp; &quot;&amp;firstname=&quot; &amp; FirstName &amp; &quot;&amp;email=&quot; &amp; Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ELM Friend Capture</label>
    <type>Text</type>
</CustomField>