force-app/main/default/objects/Contact/fields/Essential_Engine_Friend_Capture__c.field-meta.xml
<CustomField>
    <fullName>Essential_Engine_Friend_Capture__c</fullName>
    <formula>&quot;https://essentialengine.com/refer-services/?referral_id=&quot; &amp; SF_ID__c &amp; &quot;&amp;firstname=&quot; &amp; FirstName &amp; &quot;&amp;email=&quot; &amp; Email &amp; &quot;&amp;source=AM&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Essential Engine Friend Capture</label>
    <type>Text</type>
</CustomField>