force-app/main/default/objects/Contact/fields/Essential_Living_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Essential_Living_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Interest Field</description>
    <label>Essential Living Magazine</label>
    <type>Checkbox</type>
</CustomField>