force-app/main/default/objects/Contact/fields/Fee_Only__c.field-meta.xml
<CustomField>
    <fullName>Fee_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fee Only</label>
    <type>Checkbox</type>
</CustomField>