force-app/main/default/objects/Contact/fields/Firm_Review_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Firm_Review_Type_del__c</fullName>
    <formula>TEXT(Account.Firm_Approval_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Review Type</label>
    <type>Text</type>
</CustomField>