force-app/main/default/objects/Contact/fields/Follow_Up_Link__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Link__c</fullName>
    <formula>&quot;http://fivestarprofessional.force.com/SelfScheduling/forcebrain__LeadRegistration?ProcessId=a2Z0W000001hYliUAE&amp;PId=0030W00003ML5kV&amp;ContactID=&quot;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traffic Follow Up Link</label>
    <type>Text</type>
</CustomField>